fix overlay timeline being cut off; improve recording settings parity; improve recording notifications

--- a/css/notifications/notifications.css
+++ b/css/notifications/notifications.css
@@ -208,3 +208,14 @@ body.zXrpABNQHpWKgSzqnGlL:has(._3yiWpBXwEmDLlaIupVXjUt) {
   overflow: hidden !important;
   white-space: nowrap !important;
 }
+
+/* TIMELINE */
+._3-UEC03E5hBqzay99CxSfu svg {
+  color: rgb(var(--color-negative)) !important;
+}
+
+.J50T1pPKv5WSdSx8z112b {
+  font-weight: 400 !important;
+  font-size: var(--size-14) !important;
+  color: rgb(var(--color-text-primary)) !important;
+}
