--- a/css/overlay/timeline.css
+++ b/css/overlay/timeline.css
@@ -72,6 +72,7 @@
 ._2_v1BiFUpGfxhBQ1QIIJfB {
   margin-top: 48px !important;
   position: relative !important;
+  height: calc(100% - 48px) !important;
 }
 
 ._2_v1BiFUpGfxhBQ1QIIJfB::before {
@@ -185,6 +186,7 @@
 
 /* TIMELINE */
 .OverlayTimeline .TimelineAndControls {
+  height: 48px !important;
   width: 100% !important;
   margin: 0px !important;
 }
@@ -216,8 +218,6 @@
   align-self: center !important;
   margin: auto !important;
 }
-
-.OverlayTimeline .TimelineAndControls {}
 
 .OverlayTimeline .gAhqB_Mx8V-7QYnzQP1eo {
   /* bottom: 0px !important; */
@@ -456,4 +456,9 @@
 /* CLIP TIP */
 ._2U6y1XIWxvkK8jTc9rAKKb {
   border: none !important;
+}
+
+/* NO RECORDING AVAILABLE */
+.OverlayTimeline ._3ixlq8K1YVBNIk7rw190aK {
+  background: rgb(var(--color-positive)) !important;
 }
