--- a/css/settings/settings.css
+++ b/css/settings/settings.css
@@ -1494,6 +1494,7 @@ button._30Og77vH37EtqaKCCDIAP9.DialogButton {
   font-size: var(--size-14) !important;
   font-weight: 400 !important;
   color: rgb(var(--color-text-primary)) !important;
+  flex-direction: column !important;
 }
 
 ._3Cqjn4ZCF_ooB9QdEA-tKi._1aBr4F-yYtm9OnDrnaLTae ._2zmD6537sVYmlyKDk4aB4l {
@@ -1514,11 +1515,11 @@ button._30Og77vH37EtqaKCCDIAP9.DialogButton {
 ._3Cqjn4ZCF_ooB9QdEA-tKi ._3uZxZMpdYwX9n7FfpbFttN ._1at1KYELJ00EAAWwcBsOd_ {
   font-size: var(--size-14) !important;
   font-weight: 400 !important;
-  color: rgb(var(--color-text-primary)) !important;
+  color: rgb(var(--color-text-secondary)) !important;
 }
 
 ._3Cqjn4ZCF_ooB9QdEA-tKi._1aBr4F-yYtm9OnDrnaLTae ._3uZxZMpdYwX9n7FfpbFttN ._28VIcjS3EY0OjoovbKmQmF {
-    color: rgb(var(--color-text-secondary)) !important;
+  color: rgb(var(--color-text-secondary)) !important;
 }
 
 ._3Cqjn4ZCF_ooB9QdEA-tKi ._3uZxZMpdYwX9n7FfpbFttN ._28VIcjS3EY0OjoovbKmQmF {
@@ -1529,20 +1530,31 @@ button._30Og77vH37EtqaKCCDIAP9.DialogButton {
   margin: 0px !important;
 }
 
+._3Lw0_xiOn-_VGCOMi6NUVk {
+  flex-wrap: wrap !important;
+  gap: 4px !important;
+  flex-direction: row !important;
+}
+
 ._3Lw0_xiOn-_VGCOMi6NUVk ._3ecQ1hQjQoPVLsXOMrf0Ss {
   font-size: var(--size-14) !important;
   font-weight: 400 !important;
-  color: rgb(var(--color-text-secondary)) !important;
+  color: rgb(var(--color-text-primary)) !important;
+  text-align: start !important;
+  text-transform: none !important;
 }
 
 ._3Lw0_xiOn-_VGCOMi6NUVk ._2jiG8w8sVwGu2jwOMfyI92 {
   font-size: var(--size-14) !important;
   font-weight: 400 !important;
   color: rgb(var(--color-text-primary)) !important;
+  text-align: start !important;
 }
 
 ._3Lw0_xiOn-_VGCOMi6NUVk ._1AVfyoaKX1mpK6B7AJjoGA {
-  padding-top: 8px !important;
+  padding-top: 0px !important;
+  justify-content: flex-start !important;
+  min-width: 100% !important;
 }
 
 /* RECORD LIST */
@@ -2062,7 +2074,7 @@ div._1IsPTEXf7ua_4XbMa3sXyW svg {
   height: 20px !important;
   width: 20px !important;
   border-radius: 25px !important;
-  margin: auto 16px !important;
+  margin: auto 0px !important;
   appearance: none !important;
   background-color: transparent !important;
 }
@@ -2126,27 +2138,27 @@ div._1IsPTEXf7ua_4XbMa3sXyW svg {
   border-radius: 0px !important;
   border: none !important;
   padding: 0px !important;
-  gap: 16px !important;
-  background-color: rgba(var(--color-negative), 0.2) !important;
   transition: none !important;
+  background-color: transparent !important;
+  outline: none !important;
+  gap: 0px !important;
 }
 
 ._7EGqd8bdiXJBd2fj5Hh8r:hover, ._7EGqd8bdiXJBd2fj5Hh8r.gpfocus {
-  background-color: rgba(var(--color-negative), 0.3) !important;
   color: rgb(var(--color-text-primary)) !important;
-  outline: 2px solid rgba(var(--color-negative), 0.5) !important;
-  outline-offset: -2px !important;
+  background-color: transparent !important;
+  outline: none !important;
 }
 
 ._7EGqd8bdiXJBd2fj5Hh8r:active{
-  background-color: rgba(var(--color-negative), 0.4) !important;
   color: rgb(var(--color-text-primary)) !important;
-  outline: 2px solid transparent !important;
-  outline-offset: -2px !important;
+  background-color: transparent !important;
+  outline: none !important;
 }
 
 ._7EGqd8bdiXJBd2fj5Hh8r.MYyvJ6lNQZtM4MHwS-Y3g, ._7EGqd8bdiXJBd2fj5Hh8r.MYyvJ6lNQZtM4MHwS-Y3g:hover, ._7EGqd8bdiXJBd2fj5Hh8r.MYyvJ6lNQZtM4MHwS-Y3g.gpfocus,._7EGqd8bdiXJBd2fj5Hh8r.MYyvJ6lNQZtM4MHwS-Y3g:active {
-  background-color: rgb(var(--color-accent)) !important;
+  background-color: transparent !important;
+  outline: none !important;
 }
 
 ._7EGqd8bdiXJBd2fj5Hh8r ._1RUoX0kTOBfqpwCaBZGDLJ {
@@ -2169,8 +2181,8 @@ div._1IsPTEXf7ua_4XbMa3sXyW svg {
   font-size: var(--size-14) !important;
   font-weight: 400 !important;
   color: rgb(var(--color-text-secondary)) !important;
-  padding: 0px 16px 16px 16px !important;
   margin-bottom: 0px !important;
+  padding: 0px 16px !important;
 }
 
 ._7EGqd8bdiXJBd2fj5Hh8r.MYyvJ6lNQZtM4MHwS-Y3g ._2BdpWib8Zcj3QSkXzmGgIB {
@@ -2183,12 +2195,35 @@ div._1IsPTEXf7ua_4XbMa3sXyW svg {
 }
 
 ._7EGqd8bdiXJBd2fj5Hh8r.MYyvJ6lNQZtM4MHwS-Y3g ._2BdpWib8Zcj3QSkXzmGgIB p {
-  color: rgb(var(--color-text-primary)) !important;
+  color: rgb(var(--color-text-secondary)) !important;
+}
+
+._2BdpWib8Zcj3QSkXzmGgIB span {
+  font-weight: 400 !important;
+}
+
+._2BdpWib8Zcj3QSkXzmGgIB b {
+  font-weight: 400 !important;
 }
 
 ._7EGqd8bdiXJBd2fj5Hh8r ._3HgL0eRQXwU6dIEXXK6qba ._2BdpWib8Zcj3QSkXzmGgIB {
   gap: 8px !important;
   margin: 0px !important;
+}
+
+/* RECORDING FOLDER */
+.Yc3_Ah2ZI5nQUvQh_3nXP, ._2Hfx7Bzi9FSN4E81QXHgnl {
+  font-size: var(--size-14) !important;
+  font-weight: 400 !important;
+  color: rgb(var(--color-accent)) !important;
+}
+
+.Yc3_Ah2ZI5nQUvQh_3nXP:hover, ._2Hfx7Bzi9FSN4E81QXHgnl:hover {
+  color: rgb(var(--color-text-secondary)) !important;
+}
+
+.Yc3_Ah2ZI5nQUvQh_3nXP:active, ._2Hfx7Bzi9FSN4E81QXHgnl:active {
+  color: rgb(var(--color-text-tertiary)) !important;
 }
 
 /* REC BETA CLOSE BUTTON */
